pid/log/build_2024-02-05_00-05-52/controller/stderr.log
  File "/home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/system.py", line 48
    )]
    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 46

